[gd_scene load_steps=12 format=2]

[ext_resource path="res://Base.gd" type="Script" id=1]
[ext_resource path="res://Pictures/WateringCan.png" type="Texture" id=2]
[ext_resource path="res://Pictures/Fertilizer.png" type="Texture" id=3]
[ext_resource path="res://Pictures/Temp/hand_cursor.png" type="Texture" id=4]
[ext_resource path="res://Pictures/Temp/Grass.png" type="Texture" id=5]
[ext_resource path="res://Pictures/Table.png" type="Texture" id=6]
[ext_resource path="res://Pictures/Temp/Layer #2.png" type="Texture" id=7]
[ext_resource path="res://Pictures/LowerHud.png" type="Texture" id=8]
[ext_resource path="res://Pot.tscn" type="PackedScene" id=9]
[ext_resource path="res://shipping_area.tscn" type="PackedScene" id=10]
[ext_resource path="res://Pictures/Box1.png" type="Texture" id=11]

[node name="Base" type="Node2D"]
script = ExtResource( 1 )
water_cursor = ExtResource( 2 )
fertilizer_cursor = ExtResource( 3 )
hand_cursor = ExtResource( 4 )

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 384.568, 216.601 )
scale = Vector2( 1.2049, 0.906671 )
texture = ExtResource( 5 )

[node name="Table" type="Sprite" parent="."]
position = Vector2( 387.883, 200.728 )
texture = ExtResource( 6 )

[node name="LowerHUD" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="LowerHUD"]
position = Vector2( 386.102, 216.08 )
scale = Vector2( 1.20235, 0.89649 )
texture = ExtResource( 7 )

[node name="LowerHud" type="Sprite" parent="LowerHUD/Background"]
position = Vector2( -0.574036, 186.004 )
texture = ExtResource( 8 )

[node name="Fertilizer" type="Sprite" parent="LowerHUD"]
position = Vector2( 535, 380 )
texture = ExtResource( 3 )

[node name="Buttons" type="Sprite" parent="LowerHUD"]
position = Vector2( 598.327, 397.346 )
texture = ExtResource( 2 )
offset = Vector2( 78.1318, -17.729 )

[node name="WateringButton" type="Button" parent="LowerHUD/Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = -56.0
margin_right = 157.0
margin_bottom = 22.0

[node name="FertilizerButton" type="Button" parent="LowerHUD/Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -108.537
margin_top = -57.5123
margin_right = -11.537
margin_bottom = 24.4877

[node name="Items" type="Node2D" parent="."]

[node name="Pot" parent="Items" instance=ExtResource( 9 )]
position = Vector2( 209.494, 143.758 )

[node name="Node2D" type="Node2D" parent="."]

[node name="real_cacti" parent="Node2D" instance=ExtResource( 10 )]

[node name="Box" type="Sprite" parent="Node2D/real_cacti"]
position = Vector2( 0.735092, -69.8337 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Node2D/real_cacti/Box"]
margin_left = -45.5757
margin_top = 44.8406
margin_right = 47.4243
margin_bottom = 92.8406
text = "Normal Cactus

"

[node name="fake_cacti" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 713.665, 172.314 )

[node name="Box2" type="Sprite" parent="Node2D/fake_cacti"]
position = Vector2( 0.249023, -65.2049 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Node2D/fake_cacti/Box2"]
margin_left = -35.2844
margin_top = 45.5757
margin_right = 39.7156
margin_bottom = 59.5757
text = "Evil Cactus"

[connection signal="pressed" from="LowerHUD/Buttons/WateringButton" to="." method="_on_WateringButton_pressed"]
[connection signal="pressed" from="LowerHUD/Buttons/FertilizerButton" to="." method="_on_FertilizerButton_pressed"]
